--- a/src/generator/css/base.less
+++ b/src/generator/css/base.less
@@ -250,7 +250,7 @@ body a:hover {
         @apply max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4;
 
         >button {
-            @apply inline-flex items-center p-2 ml-3 text-sm md:hidden focus:outline-none focus:ring-2 focus:ring-gray-200 text-gray-400 focus:ring-gray-600;
+            @apply inline-flex items-center p-2 ml-3 text-sm lg:hidden focus:outline-none focus:ring-2 focus:ring-gray-200 text-gray-400 focus:ring-gray-600;
         }
 
         svg {
@@ -271,14 +271,14 @@ body a:hover {
     }
 
     .nav-list-wrapper {
-        @apply w-full md:block md:w-auto;
+        @apply w-full lg:block lg:w-auto;
 
         ul {
-            @apply font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 md:mt-0;
+            @apply font-medium flex flex-col p-4 lg:p-0 mt-4 lg:flex-row lg:space-x-8 lg:mt-0;
         }
 
         a {
-            @apply block py-2 pl-3 pr-4 rounded md:border-0 md:p-0 text-white md:hover:text-gray-500 hover:bg-gray-700 md:hover:bg-transparent;
+            @apply block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0 text-white lg:hover:text-gray-500 hover:bg-gray-700 lg:hover:bg-transparent;
         }
     }
 
